# cmake-tutorial

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package.json
src/: main.cpp
